--- a/app/src/main/res/layout/auction_toolbar.xml
+++ b/app/src/main/res/layout/auction_toolbar.xml
@@ -31,8 +31,8 @@
             android:id="@+id/view_auction_toolbar_spinner_sort_col"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            />
+            android:layout_gravity="center_vertical|end"
+            android:paddingStart="5dp"/>
 
 
         <ProgressBar
