--- a/app/src/main/res/layout/auction_list_item.xml
+++ b/app/src/main/res/layout/auction_list_item.xml
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <android.support.v7.widget.CardView
-    android:id="@+id/list_item_member_card_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/list_item_member_card_view"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
     android:layout_marginTop="3dp"
     android:layout_marginStart="5dp"
     android:layout_marginEnd="10dp"
-    card_view:cardCornerRadius="2dp"
-    card_view:contentPaddingTop="10dp"
-    card_view:contentPaddingBottom="5dp"
-    card_view:contentPaddingLeft="10dp"
-    card_view:contentPaddingRight="10dp">
+    app:cardCornerRadius="2dp"
+    app:contentPaddingTop="10dp"
+    app:contentPaddingBottom="5dp"
+    app:contentPaddingLeft="10dp"
+    app:contentPaddingRight="10dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_height="match_parent">
 
         <com.android.volley.toolbox.NetworkImageView
             android:id="@+id/list_item_auction_img"
@@ -38,19 +37,19 @@
                 android:id="@+id/list_item_auction_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                card_view:label_text="@string/label_title"/>
+                app:label_text="@string/label_title"/>
 
             <com.balch.auctionbrowser.ui.LabelTextView
                 android:id="@+id/list_item_auction_end_time"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                card_view:label_text="@string/label_end_time"/>
+                app:label_text="@string/label_end_time"/>
 
             <com.balch.auctionbrowser.ui.LabelTextView
                 android:id="@+id/list_item_auction_price"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                card_view:label_text="@string/label_price"/>
+                app:label_text="@string/label_price"/>
 
         </LinearLayout>
 
@@ -59,8 +58,8 @@
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:text="@string/button_note"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
+            android:layout_below="@id/list_item_auction_img"
+            android:layout_alignParentStart="true"
             android:textSize="12sp"
             android:textColor="@android:color/black"
             android:background="@drawable/background_button_note"/>
