--- a/app/src/main/res/layout/auction_list_item.xml
+++ b/app/src/main/res/layout/auction_list_item.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/list_item_member_card_view"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="110dp"
     android:layout_marginTop="3dp"
     android:layout_marginStart="5dp"
     android:layout_marginEnd="10dp"
