--- a/app/src/main/res/layout/auction_view.xml
+++ b/app/src/main/res/layout/auction_view.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
     <include
@@ -44,4 +40,4 @@
         android:layout_height="0dp"
         android:layout_weight="1"/>
 
-</LinearLayout>
+</merge>
