--- a/app/src/main/res/layout/auction_toolbar.xml
+++ b/app/src/main/res/layout/auction_toolbar.xml
@@ -44,7 +44,7 @@
             android:layout_gravity="center"
             android:indeterminateTint="?attr/colorPrimaryDark"
             android:indeterminateTintMode="src_in"
-            android:visibility="invisible"/>
+            android:visibility="gone"/>
 
     </LinearLayout>
 
