--- a/app/src/main/res/layout/auction_view.xml
+++ b/app/src/main/res/layout/auction_view.xml
@@ -2,42 +2,22 @@
 
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context=".MainActivity">
-
-    <include
-        android:id="@+id/auction_view_toolbar"
-        layout="@layout/auction_toolbar" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="5dp">
-
-        <EditText
-            android:id="@+id/auction_view_search_text"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:hint="@string/edit_hint_search_keyword"/>
-
-        <ImageButton
-            android:id="@+id/auction_view_search_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@android:drawable/ic_menu_search"/>
-    </LinearLayout>
-
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/action_view_recycler"
-        android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_height="match_parent"/>
+
+    <ProgressBar
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:id="@+id/auction_view_progress_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:indeterminate="true"
+        android:layout_gravity="bottom"/>
 
 </merge>
