add Retrofit, RxJava, Gson, and Glide

--- a/app/src/main/res/layout/auction_detail_dialog.xml
+++ b/app/src/main/res/layout/auction_detail_dialog.xml
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.android.volley.toolbox.NetworkImageView
+        <ImageView
             android:id="@+id/auction_detail_item_img"
             android:layout_width="100dp"
             android:layout_height="100dp"
