--- a/app/src/main/res/layout/auction_list_item.xml
+++ b/app/src/main/res/layout/auction_list_item.xml
@@ -21,7 +21,7 @@
         android:layout_height="match_parent"
         >
 
-        <com.android.volley.toolbox.NetworkImageView
+        <ImageView
             android:id="@+id/list_item_auction_img"
             android:layout_width="64dp"
             android:layout_height="64dp"
