--- a/app/src/main/res/layout/auction_detail_dialog.xml
+++ b/app/src/main/res/layout/auction_detail_dialog.xml
@@ -15,7 +15,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:textSize="16sp"/>
+        android:textSize="16sp"
+        android:fontFamily="@font/oswald_bold"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
