--- a/app/src/main/res/layout/item_auction_list.xml
+++ b/app/src/main/res/layout/item_auction_list.xml
@@ -16,55 +16,54 @@
     app:contentPaddingRight="10dp"
     app:cardBackgroundColor="@color/cardview_light_background">
 
-    <RelativeLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/list_item_auction_img"
             android:layout_width="64dp"
             android:layout_height="64dp"
-            android:layout_alignParentStart="true" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <com.balch.auctionbrowser.ui.LabelTextView
+            android:id="@+id/list_item_auction_title"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_alignTop="@id/auction_detail_item_img"
-            android:layout_toEndOf="@id/auction_detail_item_img">
+            app:label_text="@string/label_title"
+            app:layout_constraintTop_toTopOf="@id/list_item_auction_img"
+            app:layout_constraintStart_toEndOf="@id/list_item_auction_img"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-            <com.balch.auctionbrowser.ui.LabelTextView
-                android:id="@+id/list_item_auction_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:label_text="@string/label_title"/>
+        <com.balch.auctionbrowser.ui.LabelTextView
+            android:id="@+id/list_item_auction_end_time"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:label_text="@string/label_end_time"
+            app:layout_constraintTop_toBottomOf="@id/list_item_auction_title"
+            app:layout_constraintStart_toStartOf="@id/list_item_auction_title"
+            app:layout_constraintEnd_toEndOf="@id/list_item_auction_title"/>
 
-            <com.balch.auctionbrowser.ui.LabelTextView
-                android:id="@+id/list_item_auction_end_time"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:label_text="@string/label_end_time"/>
-
-            <com.balch.auctionbrowser.ui.LabelTextView
-                android:id="@+id/list_item_auction_price"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:label_text="@string/label_price"/>
-
-        </LinearLayout>
+        <com.balch.auctionbrowser.ui.LabelTextView
+            android:id="@+id/list_item_auction_price"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:label_text="@string/label_price"
+            app:layout_constraintTop_toBottomOf="@id/list_item_auction_end_time"
+            app:layout_constraintStart_toStartOf="@id/list_item_auction_end_time"
+            app:layout_constraintEnd_toEndOf="@id/list_item_auction_end_time"/>
 
         <Button
             android:id="@+id/list_item_auction_button_note"
             android:layout_width="wrap_content"
-            android:layout_height="30dp"
+            android:layout_height="28dp"
             android:text="@string/button_note"
-            android:layout_below="@id/list_item_auction_img"
-            android:layout_alignParentStart="true"
             android:textSize="12sp"
             android:textColor="@android:color/black"
-            android:background="@drawable/background_button_note"/>
+            android:background="@drawable/background_button_note"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/list_item_auction_img"/>
 
-    </RelativeLayout>
+    </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
