--- a/app/src/main/res/layout/view_auction.xml
+++ b/app/src/main/res/layout/view_auction.xml
@@ -2,6 +2,7 @@
 
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -10,17 +11,8 @@
         android:id="@+id/action_view_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/darker_gray"/>
-
-    <ProgressBar
-        android:id="@+id/auction_view_progress_bar"
-        style="@style/Widget.AppCompat.ProgressBar"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_gravity="top"
-        android:layout_marginTop="20dp"
-        android:indeterminate="true"
-        android:indeterminateTint="?attr/colorPrimary"
-        android:visibility="gone" />
+        android:background="@android:color/darker_gray"
+        android:scrollbars="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
 </merge>
